--- a/ld/game.html
+++ b/ld/game.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ld28 by scottrick</title>
+    <title>Game</title>
   </head>
   <body>
-    <p>Ludum Dare 28 Entry</p>
-    <a href="ld/game.html">Game</a>
-    
+    <p>Game</p>
   </body>
 </html>
