--- a/ld/game.html
+++ b/ld/game.html
@@ -1,11 +1,12 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Game</title>
-  </head>
-  <body>
-    <p>Game</p>
-  </body>
+<html lang="en-en"> 
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Ludum Dare 28 [scottrick's entry]</title>
+</head>
+
+<body>
+  <script type="text/javascript" src="game.js"></script>
+</body>
+
 </html>
