--- a/ld/game.html
+++ b/ld/game.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Ludum Dare 28 [scottrick's entry]</title>
+  <title>[scottrick's Ludum Dare 28 entry]</title>
 </head>
 
 <body>
