UPdated index title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ld28 by scottrick</title>
+    <title>[scottrick's Ludum Dare 28 entry]</title>
   </head>
   <body>
-    <p>Ludum Dare 28 Entry</p>
+    <p>[scottrick's Ludum Dare 28 entry]</p>
     <a href="ld/game.html">Game</a>
     
   </body>
