Stubbed in how to load and draw images, play mp3

--- a/ld/game.html
+++ b/ld/game.html
@@ -6,7 +6,17 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="game.js"></script>
+	<!-- example for image -->
+	<image id="imageId" src="something.png" style="display:none"></image>
+
+	<!-- example for audio -->
+	<audio id="audioId" src="something.mp3" style="display:none"></audio>
+
+	<!-- import jquery -->
+	<script src="http://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script>
+
+	<!-- the game javascript files -->
+	<script src="game.js" type="text/javascript"></script>
 </body>
 
-</html>
+</html>	
