Updated index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>[scottrick's Ludum Dare 28 entry]</title>
   </head>
   <body>
-    <p>[scottrick's Ludum Dare 28 entry]</p>
-    <a href="ld/game.html">Game</a>
+  	<p>You only get one!</p>
+    <p>scottrick's Ludum Dare 28 entry</p>
+    <a href="ld/game.html">Game</a> <br><br>
+    <a href="https://github.com/scottrick/ld28/tree/gh-pages/ld">Source Code</a>
     
   </body>
 </html>
