--- a/ld/game.html
+++ b/ld/game.html
@@ -5,6 +5,15 @@
   <title>[scottrick's Ludum Dare 28 entry]</title>
 </head>
 
+<style>
+#hatfat {
+		width:  800px;
+     	height: 600px;
+     	margin: 0 auto;
+     	border: 2px solid gray;}
+</style>
+
+
 <body>
 	<!-- example for image -->
 	<image id="imageId" src="something.png" style="display:none"></image>
@@ -12,8 +21,12 @@
 	<!-- example for audio -->
 	<audio id="audioId" src="something.mp3" style="display:none"></audio>
 
+	<div id="hatfat">
+ 		<canvas id="canvas" width="800" height="600"></canvas>
+	</div>
+
 	<!-- import jquery -->
-	<script src="http://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script>
+	<!-- <script src="http://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script> -->
 
 	<!-- the game javascript files -->
 	<script src="game.js" type="text/javascript"></script>
