--- a/ld/game.html
+++ b/ld/game.html
@@ -16,19 +16,20 @@
 
 <body>
 	<!-- example for image -->
-	<image id="imageId" src="something.png" style="display:none"></image>
+	<!-- <image id="imageId" src="something.png" style="display:none"></image> -->
 
 	<!-- example for audio -->
-	<audio id="audioId" src="something.mp3" style="display:none"></audio>
+	<!-- <audio id="audioId" src="something.mp3" style="display:none"></audio> -->
 
 	<div id="hatfat">
  		<canvas id="canvas" width="800" height="600"></canvas>
 	</div>
 
-	<!-- import jquery -->
-	<!-- <script src="http://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script> -->
-
 	<!-- the game javascript files -->
+	<script src="util.js" type="text/javascript"></script>
+	<script src="gameobject.js" type="text/javascript"></script>
+	<script src="pointobject.js" type="text/javascript"></script>
+	<script src="scene.js" type="text/javascript"></script>
 	<script src="game.js" type="text/javascript"></script>
 </body>
 
