--- a/ld/game.html
+++ b/ld/game.html
@@ -15,8 +15,8 @@
 
 
 <body>
-	<!-- example for image -->
-	<!-- <image id="imageId" src="something.png" style="display:none"></image> -->
+	<image id="starImageId" src="star.png" style="display:none"></image>
+	<image id="cannonImageId" src="cannonball.png" style="display:none"></image>
 
 	<!-- example for audio -->
 	<!-- <audio id="audioId" src="something.mp3" style="display:none"></audio> -->
@@ -27,8 +27,11 @@
 
 	<!-- the game javascript files -->
 	<script src="util.js" type="text/javascript"></script>
+	<script src="images.js" type="text/javascript"></script>
 	<script src="gameobject.js" type="text/javascript"></script>
 	<script src="pointobject.js" type="text/javascript"></script>
+	<script src="star.js" type="text/javascript"></script>
+	<script src="cannonball.js" type="text/javascript"></script>
 	<script src="scene.js" type="text/javascript"></script>
 	<script src="game.js" type="text/javascript"></script>
 </body>
