--- a/ld/game.html
+++ b/ld/game.html
@@ -32,7 +32,10 @@
 	<script src="pointobject.js" type="text/javascript"></script>
 	<script src="star.js" type="text/javascript"></script>
 	<script src="cannonball.js" type="text/javascript"></script>
+	<script src="polygonobject.js" type="text/javascript"></script>
+	<script src="rectangleobject.js" type="text/javascript"></script>
 	<script src="scene.js" type="text/javascript"></script>
+	<script src="gamescene.js" type="text/javascript"></script>
 	<script src="game.js" type="text/javascript"></script>
 </body>
 
