Got collision buckets working, just have to calculate collisions now

--- a/ld/game.html
+++ b/ld/game.html
@@ -28,6 +28,7 @@
 	<!-- the game javascript files -->
 	<script src="util.js" type="text/javascript"></script>
 	<script src="images.js" type="text/javascript"></script>
+	<script src="bucket.js" type="text/javascript"></script>
 	<script src="gameobject.js" type="text/javascript"></script>
 	<script src="pointobject.js" type="text/javascript"></script>
 	<script src="star.js" type="text/javascript"></script>
