Added support for some better FX

--- a/ld/game.html
+++ b/ld/game.html
@@ -16,6 +16,7 @@
 
 <body>
 	<image id="starImageId" src="star.png" style="display:none"></image>
+	<image id="sparkImageId" src="spark.png" style="display:none"></image>
 	<image id="cannonImageId" src="cannonball.png" style="display:none"></image>
 
 	<!-- example for audio -->
@@ -31,6 +32,7 @@
 	<script src="bucket.js" type="text/javascript"></script>
 	<script src="gameobject.js" type="text/javascript"></script>
 	<script src="pointobject.js" type="text/javascript"></script>
+	<script src="spark.js" type="text/javascript"></script>
 	<script src="star.js" type="text/javascript"></script>
 	<script src="cannonball.js" type="text/javascript"></script>
 	<script src="polygonobject.js" type="text/javascript"></script>
