--- a/ld/game.html
+++ b/ld/game.html
@@ -38,6 +38,8 @@
 	<script src="polygonobject.js" type="text/javascript"></script>
 	<script src="rectangleobject.js" type="text/javascript"></script>
 	<script src="scene.js" type="text/javascript"></script>
+	<script src="levels.js" type="text/javascript"></script>
+	<script src="splashscene.js" type="text/javascript"></script>
 	<script src="gamescene.js" type="text/javascript"></script>
 	<script src="game.js" type="text/javascript"></script>
 </body>
