--- a/ld/game.html
+++ b/ld/game.html
@@ -40,6 +40,7 @@
 	<script src="scene.js" type="text/javascript"></script>
 	<script src="levels.js" type="text/javascript"></script>
 	<script src="splashscene.js" type="text/javascript"></script>
+	<script src="victoryscene.js" type="text/javascript"></script>
 	<script src="gamescene.js" type="text/javascript"></script>
 	<script src="game.js" type="text/javascript"></script>
 </body>
