--- a/ld/game.html
+++ b/ld/game.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>[scottrick's Ludum Dare 28 entry]</title>
+  <title>Star Cannon</title>
 </head>
 
 <style>
@@ -35,6 +35,7 @@
 	<script src="spark.js" type="text/javascript"></script>
 	<script src="star.js" type="text/javascript"></script>
 	<script src="cannonball.js" type="text/javascript"></script>
+	<script src="cannon.js" type="text/javascript"></script>
 	<script src="polygonobject.js" type="text/javascript"></script>
 	<script src="rectangleobject.js" type="text/javascript"></script>
 	<script src="scene.js" type="text/javascript"></script>
