Added basic cannon art

--- a/ld/game.html
+++ b/ld/game.html
@@ -17,7 +17,8 @@
 <body>
 	<image id="starImageId" src="star.png" style="display:none"></image>
 	<image id="sparkImageId" src="spark.png" style="display:none"></image>
-	<image id="cannonImageId" src="cannonball.png" style="display:none"></image>
+	<image id="cannonImageId" src="cannon.png" style="display:none"></image>
+	<image id="cannonballImageId" src="cannonball.png" style="display:none"></image>
 
 	<!-- example for audio -->
 	<!-- <audio id="audioId" src="something.mp3" style="display:none"></audio> -->
