--- a/ld/game.html
+++ b/ld/game.html
@@ -15,6 +15,7 @@
 
 
 <body>
+	<image id="smokeImageId" src="smoke.png" style="display:none"></image>
 	<image id="starImageId" src="star.png" style="display:none"></image>
 	<image id="sparkImageId" src="spark.png" style="display:none"></image>
 	<image id="cannonImageId" src="cannon.png" style="display:none"></image>
@@ -34,6 +35,7 @@
 	<script src="gameobject.js" type="text/javascript"></script>
 	<script src="pointobject.js" type="text/javascript"></script>
 	<script src="spark.js" type="text/javascript"></script>
+	<script src="smoke.js" type="text/javascript"></script>
 	<script src="star.js" type="text/javascript"></script>
 	<script src="cannonball.js" type="text/javascript"></script>
 	<script src="cannon.js" type="text/javascript"></script>
