added star sound

--- a/ld/game.html
+++ b/ld/game.html
@@ -21,8 +21,17 @@
 	<image id="cannonImageId" src="cannon.png" style="display:none"></image>
 	<image id="cannonballImageId" src="cannonball.png" style="display:none"></image>
 
-	<!-- example for audio -->
-	<!-- <audio id="audioId" src="something.mp3" style="display:none"></audio> -->
+	<audio id="soundStar0" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar1" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar2" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar3" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar4" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar5" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar6" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar7" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar8" src="star1.wav" style="display:none"></audio>
+	<audio id="soundStar9" src="star1.wav" style="display:none"></audio>
+
 
 	<div id="hatfat">
  		<canvas id="canvas" width="800" height="600"></canvas>
@@ -31,6 +40,7 @@
 	<!-- the game javascript files -->
 	<script src="util.js" type="text/javascript"></script>
 	<script src="images.js" type="text/javascript"></script>
+	<script src="sounds.js" type="text/javascript"></script>
 	<script src="bucket.js" type="text/javascript"></script>
 	<script src="gameobject.js" type="text/javascript"></script>
 	<script src="pointobject.js" type="text/javascript"></script>
