Added bounce and cannon sounds

--- a/ld/game.html
+++ b/ld/game.html
@@ -32,6 +32,19 @@
 	<audio id="soundStar8" src="star1.wav" style="display:none"></audio>
 	<audio id="soundStar9" src="star1.wav" style="display:none"></audio>
 
+	<audio id="soundFire0" src="fire1.wav" style="display:none"></audio>
+	<audio id="soundFire1" src="fire1.wav" style="display:none"></audio>
+
+	<audio id="soundMisfire0" src="misfire1.wav" style="display:none"></audio>
+	<audio id="soundMisfire1" src="misfire1.wav" style="display:none"></audio>
+	<audio id="soundMisfire2" src="misfire1.wav" style="display:none"></audio>
+	<audio id="soundMisfire3" src="misfire1.wav" style="display:none"></audio>
+
+	<audio id="soundBounce0" src="bounce1.wav" style="display:none"></audio>
+	<audio id="soundBounce1" src="bounce1.wav" style="display:none"></audio>
+	<audio id="soundBounce2" src="bounce1.wav" style="display:none"></audio>
+	<audio id="soundBounce3" src="bounce1.wav" style="display:none"></audio>
+	<audio id="soundBounce4" src="bounce1.wav" style="display:none"></audio>
 
 	<div id="hatfat">
  		<canvas id="canvas" width="800" height="600"></canvas>
