--- a/ld/game.html
+++ b/ld/game.html
@@ -47,6 +47,7 @@
 	<audio id="soundBounce4" src="bounce1.wav" style="display:none"></audio>
 
 	<audio id="titleTrack" src="title_ld28.mp3" style="display:none"></audio>
+	<audio id="gameTrack" src="dreamy_ld28.mp3" style="display:none"></audio>
 
 	<div id="hatfat">
  		<canvas id="canvas" width="800" height="600"></canvas>
